# pprbf

./: .gitmodules  README.md
src/: CMakeLists.txt  aby_probe.cpp  test  test.cpp
src/Time/: ac_time.txt  bc_time.txt  time_plot.py
src/arith_innerproduct_test/: CMakeLists.txt
src/benchmark_arith_innerproduct/: CMakeLists.txt  innerproduct_test.cpp
src/benchmark_bool_innerproduct/: CMakeLists.txt
src/bool_innerproduct_test/: CMakeLists.txt  innerproduct_test.cpp
src/data/: testdp_mat.csv
src/function_realization/: boolean_calculation.cpp
src/innerproduct_circuit/: CMakeLists.txt  csv_parser.h  csv_writer.cpp  csv_writer.h  innerproduct_circuit.cpp  long_array.cpp  long_array.h  probe  self_dot_product_vector.cpp  self_dot_product_vector.h
src/innerproduct_circuit_arith/: CMakeLists.txt  csv_parser.cpp  csv_parser.h  csv_writer.h  generate_random_data.cpp  generate_random_data.h  innerproduct_circuit.cpp  innerproduct_circuit_arith.cpp  long_array.cpp  long_array.h  read_test_options.cpp  read_test_options.h  self_dot_product_vector.h
src/innerproduct_circuit_bool/: CMakeLists.txt  csv_parser.h  csv_writer  csv_writer.h  generate_random_data.h  innerproduct_circuit_bool.cpp  long_array.cpp  long_array.h  probe.cpp  (+2 more)
src/self_made_innerproduct/: CMakeLists.txt  Log.txt  csv_parser.cpp  csv_parser.h  csv_writer.cpp  csv_writer.h  dp_matrix.csv  generate_simulated_data.cpp  generate_simulated_data.h  probe1  probe1.cpp  self_made_innerproduct.cpp  vector_process.cpp  vector_process.h
src/self_made_innerproduct/csv_files/: x.csv  y.csv  z.csv
(+160 files in other folders)
